# praxis

./: .containerignore  .gitignore  Cargo.toml  Containerfile  Makefile  README.md  clippy.toml  deny.toml
benchmarks/: Cargo.toml
benchmarks/comparison/configs/llmd/: envoy-go-epp.yaml  epp-config.yaml  epp-endpoints.yaml  praxis-go-epp.yaml  praxis-native.yaml  praxis-simple.yaml
benchmarks/llm-d/: run-envoy-go-epp-smoke.sh  run-extended-benchmark.sh  run-guidellm-matrix.sh  run-guidellm-sim-benchmark.sh  run-guidellm-smoke.sh  run-praxis-go-epp-extended.sh  run-praxis-go-epp-smoke.sh  run-same-backend-benchmark.sh  run-sim-benchmark.sh  run-sim-large-prompt-benchmark.sh  run-smoke.sh  run-track-b-guidellm-sim.sh  run-track-b-large-prompt.sh  run-track-b-sim-benchmark.sh  summarize-guidellm-results.py
benchmarks/llm-d/data/: guidellm-prompts.json
benchmarks/microbenchmarks/: common.rs  filter_pipeline.rs  load_balancer.rs  router_lookup.rs
benchmarks/src/: lib.rs  llmd.rs  result.rs  runner.rs  stats.rs
benchmarks/src/proxy/: envoy.rs  haproxy.rs  nginx.rs  praxis.rs
benchmarks/src/scenario/: settings.rs  workload.rs
benchmarks/src/tools/: vegeta.rs
docs/: tls.md  (+11 more)
filter/: Cargo.toml
filter/ext-proc/: Cargo.toml
filter/ext-proc/src/: callout.rs  duplex.rs  lib.rs  llmd_external_epp.rs  mutations.rs  proto.rs  request_phase.rs  tests.rs
filter/src/: actions.rs  any_filter.rs  context.rs  factory.rs  filter.rs  lib.rs  metrics.rs  path_match.rs  registry.rs  results.rs  tcp_filter.rs
filter/src/agentic/: mod.rs  state.rs
filter/src/agentic/mcp_gateway/: config.rs  mod.rs  tests.rs
filter/src/body/: buffer.rs  limits.rs  mod.rs
filter/src/builtins/: mod.rs
filter/src/builtins/http/: mod.rs  value_safety.rs
filter/src/builtins/http/ai/: config_validation.rs  mod.rs
filter/src/builtins/http/ai/agentic/: mod.rs
filter/src/builtins/http/ai/agentic/a2a/: config.rs  envelope.rs  mod.rs  sse.rs  task_routing.rs  tests.rs
filter/src/builtins/http/ai/agentic/json_rpc/: config.rs  envelope.rs  mod.rs  tests.rs
filter/src/builtins/http/ai/agentic/mcp/: config.rs  mod.rs  protocol.rs
filter/src/builtins/http/ai/classifier/: mod.rs
filter/src/builtins/http/ai/grid/: descriptor.rs  mod.rs  route.rs
filter/src/builtins/http/ai/guardrails/: config.rs  filter.rs  mod.rs  tests.rs
filter/src/builtins/http/ai/inference/: mod.rs  model_to_header.rs
filter/src/builtins/http/ai/openai/: mod.rs
filter/src/builtins/http/ai/prompt_enrich/: config.rs  mod.rs  tests.rs
filter/src/builtins/http/ai/responses/: mod.rs  parser.rs  sse.rs
filter/src/builtins/http/ai/responses_orchestrator/: mod.rs  state.rs
filter/src/builtins/http/ai/store/: mod.rs  postgres.rs  sqlite.rs  tests.rs  types.rs
filter/src/builtins/http/ai/token_usage/: mod.rs  providers.rs  tests.rs
filter/src/builtins/http/observability/: access_log.rs  request_id.rs
filter/src/builtins/http/payload_processing/: compression.rs  compression_config.rs  mod.rs
filter/src/builtins/http/payload_processing/a2a/: config.rs  envelope.rs  mod.rs  tests.rs
filter/src/builtins/http/payload_processing/json_body_field/: config.rs  extract.rs  mod.rs  tests.rs
filter/src/builtins/http/payload_processing/json_rpc/: config.rs  envelope.rs  mod.rs  tests.rs
filter/src/builtins/http/payload_processing/mcp/: config.rs  envelope.rs  mod.rs  tests.rs
filter/src/builtins/http/security/: grid_ingress_trust.rs  ip_acl.rs  mod.rs
filter/src/builtins/http/security/cors/: config.rs  mod.rs  origin.rs  tests.rs
filter/src/builtins/http/security/credential_injection/: config.rs  filter.rs  tests.rs
filter/src/builtins/http/security/csrf/: config.rs  origin.rs  tests.rs
filter/src/builtins/http/security/guardrails/: config.rs  filter.rs  mod.rs  pii.rs  tests.rs
filter/src/builtins/http/security/http_ext_auth/: config.rs  mod.rs  tests.rs
filter/src/builtins/http/traffic_management/: endpoint_selector.rs  mod.rs  redirect.rs  static_response.rs  token_bucket.rs
filter/src/builtins/http/traffic_management/circuit_breaker/: mod.rs  tests.rs
filter/src/builtins/http/traffic_management/grpc_detection/: content_type.rs  mod.rs  tests.rs
filter/src/builtins/http/traffic_management/load_balancer/: entry.rs  mod.rs  tests.rs
filter/src/builtins/http/traffic_management/rate_limit/: config.rs  limiter.rs  mod.rs  tests.rs
filter/src/builtins/http/traffic_management/router/: config.rs  json_alias.rs  matching.rs  mod.rs  tests.rs
filter/src/builtins/http/transformation/: mod.rs  path_sanitize.rs  url_rewrite.rs
filter/src/builtins/http/transformation/header/: mod.rs  tests.rs
filter/src/builtins/tcp/: mod.rs
filter/src/builtins/tcp/observability/: tcp_access_log.rs
filter/src/builtins/tcp/traffic_management/: mod.rs  sni_router.rs  tcp_load_balancer.rs
filter/src/condition/: request.rs
filter/src/load_balancing/: consistent_hash.rs  least_connections.rs  p2c.rs
filter/src/pipeline/: body.rs  branch.rs  build.rs  build_branch.rs  checks.rs  clusters.rs  evaluate.rs  filter.rs  http.rs  http_utils.rs  mod.rs  tcp.rs  test_filters.rs  tests.rs
tests/conformance/: Cargo.toml
tests/conformance/tests/suite/: chunked.rs  cors.rs  h2spec.rs  http.rs  ipv6.rs  main.rs  tls.rs
tests/conformance/tests/suite/rfcs/: mod.rs  rfc6265.rs  rfc7239.rs  rfc9110.rs  rfc9112.rs  rfc9113.rs  test_utils.rs
tests/fuzz/: Cargo.toml
tests/fuzz/fuzz_targets/: fuzz_config_parse.rs  fuzz_filter_pipeline.rs  fuzz_path_sanitize.rs  fuzz_sni.rs
tests/resilience/: Cargo.toml
tests/resilience/tests/suite/: backend_failure.rs  backend_recovery.rs  concurrent_load.rs  large_payload.rs  main.rs  multi_listener_isolation.rs  rate_limit_burst.rs  throughput_body.rs  throughput_filter_chain.rs  throughput_production.rs  throughput_simple.rs  throughput_tcp.rs  throughput_utils.rs
tls/: Cargo.toml
tls/src/: cached.rs  client_auth.rs  error.rs  identity.rs  lib.rs  reload.rs  sni.rs  test_utils.rs  watcher.rs
tls/src/config/: certs.rs  listener.rs  mod.rs
tls/src/setup/: loader.rs  mod.rs  sni.rs
(+451 files in other folders)
