[package]
name = "benchmarks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Benchmark tooling and load-test orchestration for Praxis"
license.workspace = true
repository.workspace = true
readme = "../README.md"
publish = false
autobenches = false

[lib]
bench = false

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["process", "fs", "io-util", "net", "time"] }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
http = { workspace = true }
praxis-core = { workspace = true }
praxis-filter = { workspace = true }

[[bench]]
name = "condition_eval"
path = "microbenchmarks/condition_eval.rs"
harness = false

[[bench]]
name = "config_parsing"
path = "microbenchmarks/config_parsing.rs"
harness = false

[[bench]]
name = "filter_pipeline"
path = "microbenchmarks/filter_pipeline.rs"
harness = false

[[bench]]
name = "headers"
path = "microbenchmarks/headers.rs"
harness = false

[[bench]]
name = "load_balancer"
path = "microbenchmarks/load_balancer.rs"
harness = false

[[bench]]
name = "router_lookup"
path = "microbenchmarks/router_lookup.rs"
harness = false
