[package]
name = "praxis-tests-conformance"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme = "../../README.md"
publish = false

[lints]
workspace = true

[dev-dependencies]
h2 = { workspace = true }
http = { workspace = true }
praxis-core = { workspace = true }
praxis-test-utils = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true, features = ["rt", "net", "io-util", "time", "macros"] }
tokio-rustls = { workspace = true }
