[package]
name = "praxis-fuzz"
version = "0.0.0"
edition = "2024"
rust-version = "1.94"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.9"
praxis-tls = { path = "../../tls", package = "praxis-proxy-tls" }
praxis-core = { path = "../../core", package = "praxis-proxy-core" }
praxis-filter = { path = "../../filter", package = "praxis-proxy-filter" }

[[bin]]
name = "fuzz_sni"
path = "fuzz_targets/fuzz_sni.rs"
doc = false

[[bin]]
name = "fuzz_path_sanitize"
path = "fuzz_targets/fuzz_path_sanitize.rs"
doc = false

[[bin]]
name = "fuzz_config_parse"
path = "fuzz_targets/fuzz_config_parse.rs"
doc = false
