[package]
name = "praxis-tests-resilience"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme = "../../README.md"
publish = false

[lints]
workspace = true

[dev-dependencies]
async-trait = { workspace = true }
benchmarks = { workspace = true }
bytes = { workspace = true }
praxis = { workspace = true }
praxis-core = { workspace = true }
praxis-filter = { workspace = true }
praxis-protocol = { workspace = true }
praxis-test-utils = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
